<resources>
    <string name="app_name">Teachers App</string>
    <string name="start_survey">Start survey</string>
    <string name="students">Students</string>
    <string name="open_latecomers">Latecomers</string>
    <string name="who_is_who">Who is who?</string>
    <string name="open_stats">Statistics</string>
    <string name="choose_photo">Choose student\'s photo</string>
    <string name="enter_name">Enter student\'s name</string>
    <string name="add_student">Add student</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="score">Score</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="student_info">Student info</string>
    <string name="delete_all">Delete all</string>
    <string name="student_saved">Student saved</string>
    <string name="student_deleted">Student deleted</string>
    <string name="all_students_deleted">All students deleted</string>
    <string name="delete_student_q">Delete student?</string>
    <string name="delete_all_students_q">Delete all students?</string>
    <string name="cancel">Cancel</string>
    <string name="list_is_empty">List is empty</string>
    <string name="data_input_failed">You must choose photo and type either first or last name to save the student!</string>
    <string name="edit_student">Edit student</string>
    <string name="student_updated">Student updated</string>
    <string name="deleted">Deleted</string>
    <string name="title_activity_new_student_list">NewStudentListActivity</string>
    <string name="undo">Undo</string>
    <string name="set_image">Set image</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="survey">Survey</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
</resources>
